--- a/src/pages/admin/Category/UpdateCategory.css
+++ b/src/pages/admin/Category/UpdateCategory.css
@@ -45,7 +45,7 @@
   
   form button {
     padding: 10px; /* Thêm khoảng đệm cho nút */
-    background-color: #5cb85c; /* Màu nền cho nút */
+    background-color: #007bff; /* Màu nền cho nút */
     color: white; /* Màu chữ cho nút */
     border: none; /* Không có viền */
     border-radius: 4px; /* Bo góc cho nút */
@@ -55,7 +55,7 @@
   }
   
   form button:hover {
-    background-color: #4cae4c; /* Màu nền cho nút khi di chuột qua */
+    background-color: #007bff; /* Màu nền cho nút khi di chuột qua */
   }
   
   form button:disabled {
