--- a/src/pages/admin/Country/CountriesAd.css
+++ b/src/pages/admin/Country/CountriesAd.css
@@ -1,6 +1,6 @@
 .categories-container {
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #2a2e38;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
