--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -93,7 +93,7 @@
   border-radius: 5px;
   border: 1px solid #333;
   background-color: #1d1e39;
-  color: #fff;
+  color: black;
   margin-bottom: 10px;
   resize: vertical;
 }
