--- a/src/components/MovieByYear/MovieByYear.css
+++ b/src/components/MovieByYear/MovieByYear.css
@@ -81,7 +81,8 @@
 .movie-list {
   display: flex;
   gap: 5px;
-  overflow-x: auto;
+  /* overflow-x: auto; */
+  overflow-x: hidden;
   scroll-behavior: smooth;
   padding: 20px 0;
   width: 100%;
