--- a/src/pages/admin/componentsAd/sidebar/Sidebar.scss
+++ b/src/pages/admin/componentsAd/sidebar/Sidebar.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   z-index: 999;
   transition: var(--default-transition);
-  overflow-y: scroll;
+  // overflow-y: scroll;
 
   &::-webkit-scrollbar {
     width: 6px;
