--- a/src/pages/admin/componentsAd/dashboard/areaCharts/AreaCharts.scss
+++ b/src/pages/admin/componentsAd/dashboard/areaCharts/AreaCharts.scss
@@ -81,7 +81,7 @@
   border-radius: 5px;
   box-shadow: var(--light-shadow1);
   background: var(--secondary-color);
-
+  width: 400px;
   @media (max-width: 768px) {
     padding: 12px;
   }
