--- a/src/pages/admin/componentsAd/movies/EditMovie.css
+++ b/src/pages/admin/componentsAd/movies/EditMovie.css
@@ -14,12 +14,14 @@
   
   .modal-content1 {
     background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    width: 500px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow-y: auto;
-    max-height: 80vh;
+  padding: 20px;
+  border-radius: 8px;
+  width: 500px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
+  max-height: 80vh;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
   }
   
   /* Header styling */
