--- a/src/components/ListProduct/ListProduct.css
+++ b/src/components/ListProduct/ListProduct.css
@@ -64,3 +64,15 @@
   margin-left: 5px;
   vertical-align: middle;
 }
+@media (max-width: 768px) {
+  .trending__product .row:first-child {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .col-lg-8, .col-lg-4 {
+    flex: 100%;
+  }
+  .btn__all {
+    text-align: center;
+  }
+}
